[MTM-64805][MTM-66274] small refactor in existing tests